FIxed bug of image not showing on the view applications page

--- a/styles/ViewApplication.module.css
+++ b/styles/ViewApplication.module.css
@@ -23,8 +23,8 @@
 }
 
 .profilePicContainer {
-  min-width: 61px;
-  min-height: 61px;
+  width: 61px;
+  height: 61px;
   border-radius: 50%;
   background-color: grey;
   overflow: hidden;
